# github-feed

./: .dockerignore  .gitignore  Docker-compose.yml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  releases.html
src/github_feed/: __init__.py  app.py  engine.py  github_client.py  main.py  models.py  out.py  tui.py  utils.py
src/github_feed/components/: env_var_panel.py  metadata_panel.py  releases_list.py
src/github_feed/css/: tui.tcss
src/github_feed/lib/: models.py  utils.py
src/github_feed/sql/: client.py  models.py
tests/: engine_test.py
