[project]
name = "github-feed"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zach Fuller", email = "zach.fuller1222@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.4",
    "urllib3>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy[faster-cache]>=1.14.0",
    "ruff>=0.8.4",
]
