[project]
name = "github-feed"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zach Fuller", email = "zach.fuller1222@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "urllib3>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.4",
    "mypy~=1.13.0",
    "ruff>=0.8.4",
]

[tool.uv]
python-preference = "system"
python-downloads = "manual"
default-groups = ["dev"]

[tool.uv.pip]
strict = true

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "S", "B", "ERA", "PLE", "PLW", "PERF", "RUF", "PT"]
ignore = ["E501", "S101"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "--disable-socket",
    "--color=yes",
    "--cov=src/gurlon",
]
markers = [
    "no_mock_export_pitr: Disable mock export PITR autouse fixture",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "typings",
    "**/.venv",
    ".venv"
]
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = true

[tool.mypy]
strict = true
exclude = "typings"
